Prevent Chrome outline on table headers from overlapping group image

--- a/app/design/frontend/Travers/default/SomethingDigital_ReactPLP/styles/components/_general.scss
+++ b/app/design/frontend/Travers/default/SomethingDigital_ReactPLP/styles/components/_general.scss
@@ -333,6 +333,7 @@ $sidebar__max-width: 240px;
 
     h2 {
         margin-top: $indent__l;
+        margin-bottom: $indent__l;
         font-size: 24px;
 
         @include min-screen($screen__m) {
